# ndt_omp

./: CMakeLists.txt  LICENSE
apps/: align.cpp
include/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
